# deep-mock

./: .gitignore  README.md  pyproject.toml
src/deep_mock/: __init__.py  deep_mock.py
src/deep_mock/examples/: __init__.py
src/deep_mock/examples/handlers/: __init__.py  user_handler.py  user_handler_relative.py
src/deep_mock/examples/services/: __init__.py  cache.py  database.py  external_api.py  external_api_relative.py  user_service.py
tests/: test_deep_mock.py  test_mock_sys_modules.py
